第一个界面显示出来了

--- a/app/src/main/res/layout/loading_tip.xml
+++ b/app/src/main/res/layout/loading_tip.xml
@@ -12,7 +12,7 @@
         android:id="@+id/img_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/loading_image"/>
+        android:src="@drawable/yun_anim"/>
 
     <TextView
         android:layout_width="wrap_content"
