专辑和歌单的实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     tools:context="com.example.lxh.firstapp.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/fl_content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
