--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="往期"
+            android:text="搜索"
             android:textColor="@color/colorAccent"/>
         <TextView
             android:id="@+id/tv_mine"
