--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="colorProgress">#ffffbb33</color>
 
-    <color name="colorTheme">#ffce3d3a</color>
+    <color name="colorTheme">#F3911D</color>
 
     <color name="color_white">#ffffff</color>
     <color name="color_black">#000000</color>
