--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorProgress">#ffffbb33</color>
 
     <color name="colorTheme">#F3911D</color>
-
+    <color name="translate">#00000000</color>
     <color name="color_white">#ffffff</color>
     <color name="color_black">#000000</color>
 
