--- a/app/src/main/res/layout/image_item_layout.xml
+++ b/app/src/main/res/layout/image_item_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.lxh.firstapp.img.MatrixView
+    <com.example.lxh.firstapp.view.MatrixView
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
