--- a/app/src/main/res/layout/recommend_header_layout.xml
+++ b/app/src/main/res/layout/recommend_header_layout.xml
@@ -1,61 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:orientation="vertical"
+    android:translationY="-10dp">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_banner"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        app:cardCornerRadius="@dimen/dp_4"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_gank"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:drawablePadding="5dp"
-            android:drawableTop="@drawable/home"
-            android:gravity="center"
-            android:text="干货"
-            android:textColor="@color/skin_title_color"
-            android:textSize="14dp"/>
+            <TextView
+                android:id="@+id/tv_gank"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:drawableTop="@drawable/home"
+                android:gravity="center"
+                android:text="干货"
+                android:textColor="@color/skin_title_color"
+                android:textSize="14dp" />
 
-        <TextView
-            android:id="@+id/tv_category"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:drawablePadding="5dp"
-            android:drawableTop="@drawable/category"
-            android:gravity="center"
-            android:text="分类"
-            android:textColor="@color/skin_title_color"
-            android:textSize="14dp"/>
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:drawableTop="@drawable/category"
+                android:gravity="center"
+                android:text="分类"
+                android:textColor="@color/skin_title_color"
+                android:textSize="14dp" />
 
-        <TextView
-            android:id="@+id/tv_joker"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:drawablePadding="5dp"
-            android:drawableTop="@drawable/joker"
-            android:gravity="center"
-            android:text="段子"
-            android:textColor="@color/skin_title_color"
-            android:textSize="14dp"/>
+            <TextView
+                android:id="@+id/tv_joker"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:drawableTop="@drawable/joker"
+                android:gravity="center"
+                android:text="段子"
+                android:textColor="@color/skin_title_color"
+                android:textSize="14dp" />
 
-    </LinearLayout>
-    <View android:layout_width="match_parent"
-          android:layout_height="1dp"
-          android:background="@color/skin_splite_color"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
