--- a/app/src/main/res/layout/today_text_layout.xml
+++ b/app/src/main/res/layout/today_text_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     android:background="@color/skin_item_bg">
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/color_black"
-        android:textSize="@dimen/sp_16"/>
+        android:textSize="@dimen/sp_16" />
 
     <TextView
         android:id="@+id/tv_tag"
@@ -33,7 +33,7 @@
         android:paddingRight="7dp"
         android:paddingTop="3dp"
         android:textColor="@color/skin_tip_color"
-        android:textSize="@dimen/dp_10"/>
+        android:textSize="@dimen/dp_10" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -45,7 +45,7 @@
         android:ellipsize="end"
         android:maxLength="10"
         android:textColor="@color/skin_tip_color"
-        android:textSize="@dimen/sp_14"/>
+        android:textSize="@dimen/sp_14" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -57,7 +57,7 @@
         android:ellipsize="end"
         android:maxLength="10"
         android:textColor="@color/skin_tip_color"
-        android:textSize="@dimen/sp_14"/>
+        android:textSize="@dimen/sp_14" />
 
     <ImageView
         android:id="@+id/iv_image"
@@ -65,6 +65,6 @@
         android:layout_height="80dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp" />
 
 </RelativeLayout>
