--- a/app/src/main/res/layout/recommend_header_layout.xml
+++ b/app/src/main/res/layout/recommend_header_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,7 +34,7 @@
                 android:gravity="center"
                 android:text="干货"
                 android:textColor="@color/skin_title_color"
-                android:textSize="14dp" />
+                android:textSize="14dp"/>
 
             <TextView
                 android:id="@+id/tv_category"
@@ -46,7 +47,7 @@
                 android:gravity="center"
                 android:text="分类"
                 android:textColor="@color/skin_title_color"
-                android:textSize="14dp" />
+                android:textSize="14dp"/>
 
             <TextView
                 android:id="@+id/tv_joker"
@@ -59,7 +60,7 @@
                 android:gravity="center"
                 android:text="段子"
                 android:textColor="@color/skin_title_color"
-                android:textSize="14dp" />
+                android:textSize="14dp"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
