--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="titlebar_height">47dp</dimen>
-
+    <dimen name="indicator_space">10dp</dimen>
 </resources>
