--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,8 @@
         <item name="android:layout_height">@dimen/titlebar_height</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+
+    <declare-styleable name="BannerIndicator">
+        <attr name="space" format="dimension"/>
+    </declare-styleable>
 </resources>
