--- a/app/src/main/res/layout/banner_item_layout.xml
+++ b/app/src/main/res/layout/banner_item_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/img_four_bi_three"
         android:scaleType="fitXY"/>
 
 </LinearLayout>
