--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -7,9 +7,9 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:background="@color/colorTheme"/>
+        style="@style/TitleBar"
+        android:background="@color/colorTheme"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:id="@+id/fl_container"
