--- a/app/src/main/res/layout/home_today_layout.xml
+++ b/app/src/main/res/layout/home_today_layout.xml
@@ -11,14 +11,19 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        app:elevation="0dp">
-
+        android:background="@android:color/transparent">
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <include layout="@layout/banner_layout"/>
+            android:layout_height="274dp"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed">
+            <include
+                layout="@layout/banner_layout"/>
+
+            <android.support.v7.widget.Toolbar
+                style="@style/TitleBar"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5"/>
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
