天气页面的完成

--- a/app/src/main/res/layout/home_weather_layout.xml
+++ b/app/src/main/res/layout/home_weather_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rl_first"
@@ -14,38 +14,60 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/weather_bg_01" />
+            android:src="@drawable/weather_bg_03"/>
 
         <TextView
             android:id="@+id/tv_wendu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="80dp"
             android:text="25"
             android:textColor="@color/color_white"
             android:textSize="70dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="80dp"
+            android:layout_toRightOf="@+id/tv_wendu"
             android:text="℃"
             android:textColor="@color/color_white"
-            android:textSize="25dp" />
+            android:textSize="25dp"/>
 
         <TextView
+            android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
+            android:drawablePadding="3dp"
+            android:drawableRight="@drawable/icon_more_down"
             android:text="北京"
             android:textColor="@color/color_white"
-            android:textSize="25dp" />
+            android:textSize="16dp"/>
+
+        <TextView
+            android:id="@+id/tv_shidu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_wendu"
+            android:layout_marginLeft="20dp"
+            android:text="湿度 85%  PM  103"
+            android:textColor="@color/color_white"
+            android:textSize="12dp"/>
+
+        <TextView
+            android:id="@+id/tv_quality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_shidu"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:text="轻度污染"
+            android:textColor="@color/color_white"
+            android:textSize="12dp"/>
 
     </RelativeLayout>
 
@@ -54,16 +76,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/colorAccent"
+        app:tabIndicatorColor="@color/weather_209cfa"
         app:tabIndicatorHeight="0dp"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/colorAccent"
-        app:tabTextColor="@android:color/black" />
+        app:tabSelectedTextColor="@color/weather_209cfa"
+        app:tabTextColor="@color/weather_7f9ee9"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_weather"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 
 </LinearLayout>
