--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,11 @@
     <declare-styleable name="BannerIndicator">
         <attr name="space" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="BottomTabLayout">
+        <attr name="icon_size" format="dimension"/>
+        <attr name="text_size" format="dimension"/>
+        <attr name="text_color" format="color"/>
+        <attr name="select_color" format="color"/>
+    </declare-styleable>
 </resources>
